FIXed Main Nav dropdown z-index VS Genre Bar
Relevant z-index’es (grammar: indices):
- Fixed Header is 9999.
- Genre Bar is 10000.
- Main Nav dropdown is 10001.

--- a/wp-content/themes/mag-wp/css/colors/default.css
+++ b/wp-content/themes/mag-wp/css/colors/default.css
@@ -570,6 +570,7 @@ body > #header-filler {
 	-moz-box-shadow: 0 5px 3px rgba(0,0,0,0.2);
 	-webkit-box-shadow: 0 5px 3px rgba(0,0,0,0.2);
 	box-shadow: 0 5px 3px rgba(0,0,0,0.2);
+	z-index: 10001;
 }
 #fixed-header #inner-header #myjquerymenu ul li ul.sub-menu li {
 	background-color: #fff !important;
